--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.3.0",
     "mongoose-slug-updater": "^3.3.0",
     "nodemon": "^3.1.0",
