--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -19,7 +20,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.3.0",
     "mongoose-slug-updater": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "streamifier": "^0.1.1"
   }
 }
