--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pug": "^3.0.2",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "tinymce": "^7.0.1"
   }
 }
