--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.3.0",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pug": "^3.0.2",
     "streamifier": "^0.1.1",
